[gd_scene load_steps=2 format=3 uid="uid://dande8qhgy6tc"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_ge8np"]

[node name="Hud2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ge8np")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_left = 33.0
offset_top = 43.0
offset_right = 383.0
offset_bottom = 83.0
scale = Vector2(1.27109, 1.27109)

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
placeholder_text = "Введите тему"
max_length = 75
expand_to_text_length = true
caret_blink = true

[connection signal="focus_entered" from="CanvasLayer/MarginContainer/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/MarginContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/LineEdit" to="." method="_on_line_edit_mouse_exited"]
[connection signal="text_submitted" from="CanvasLayer/MarginContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
